installer/munchkin/munchkin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: munchkin
  namespace: ops-pilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: munchkin
  template:
    metadata:
      labels:
        app: munchkin
    spec:
      volumes:
        - name: k3s-config
          hostPath:
            path: <YOUR_KUBE_CONFIG>
            type: File
      containers:
        - name: munchkin-app
          image: ccr.ccs.tencentyun.com/megalab/munchkin
          ports:
            - containerPort: 8000
          command:
            - bash
            - -c
            - |
              python3 manage.py collectstatic --noinput &&
              supervisord -n
          volumeMounts:
            - name: k3s-config
              mountPath: /root/.kube/config
