installer/munchkin/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: munchkin
  namespace: ops-pilot
spec:
  selector:
    app: munchkin
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
