installer/munchkin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: munchkin
  namespace: ops-pilot
spec:
  rules:
    - host: <YOUR_HOST>
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: munchkin
              port:
                number: 8000
